--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=demo
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/tingeso
-spring.datasource.username=root
-spring.datasource.password=Lukas.2024
-
+spring.datasource.url=jdbc:mysql://${DB_HOST}:3306/new_schema123
+spring.datasource.username=root2
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto= update
