--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-	id 'java'
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
+	id 'java'
 }
 
 group = 'com.example'
@@ -35,8 +35,20 @@ dependencies {
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 }
 
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+jar {
+	archiveFileName = "backend.jar"
+	manifest {
+		attributes(
+				'Main-Class': 'com.example.demo.DemoApplication' // Reemplaza con la ruta de tu clase principal
+		)
+	}
+}
+
+
 
 
