--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=demo
-server.port=8080
+server.port=8090
+#spring.datasource.url=jdbc:mysql://localhost:3306/new_schema
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.url=jdbc:mysql://mysql-container:3306/new_schema
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.username=root
+#spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto= update
