--- a/payroll-frontend/.env
+++ b/payroll-frontend/.env
@@ -1,2 +1,2 @@
-VITE_PAYROLL_BACKEND_SERVER = 192.168.1.88
-VITE_PAYROLL_BACKEND_PORT = 8080
+VITE_PAYROLL_BACKEND_SERVER = localhost
+VITE_PAYROLL_BACKEND_PORT = 80
