--- a/payroll-frontend/Deployment/backend.conf
+++ b/payroll-frontend/Deployment/backend.conf
@@ -7,15 +7,14 @@ http {
         server backend1:8090;
         server backend2:8090;
         server backend3:8090;
-    }
-
-    server {
+}
+    server {    
         listen 80;
         charset utf-8;
         access_log off;
 
         location / { 
-            proxy_pass http://backend/;
-        }
+            proxy_pass http://backend;       
+        }    
     }
 }
