--- a/payroll-frontend/Deployment/frontend.conf
+++ b/payroll-frontend/Deployment/frontend.conf
@@ -4,18 +4,18 @@ events {
 
 http {
     upstream frontend {
-        server frontend1:80;
-        server frontend2:80;
-        server frontend3:80;
+        server frontend1:3000;
+        server frontend2:3000;
+        server frontend3:3000;
     }
 
-    server {
+    server {    
         listen 8090;
         charset utf-8;
         access_log off;
 
         location / { 
-            proxy_pass http://frontend/;
-        }
+            proxy_pass http://frontend;       
+        }    
     }
 }
