--- a/payroll-frontend/Dockerfile
+++ b/payroll-frontend/Dockerfile
@@ -1,4 +1,10 @@
-FROM nginx:stable-alpine
-COPY dist /usr/share/nginx/html
-EXPOSE 80
+FROM nginx:alpine
+
+COPY /dist /usr/share/nginx/html
+COPY /nginx/conf.d /etc/nginx/conf.d
+
+# Expose port 3000 for the Nginx server
+EXPOSE 3000
+
+# Start Nginx when the container runs
 CMD ["nginx", "-g", "daemon off;"]
