--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=${DB_PASSWORD}
 #spring.datasource.username=root
 #spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto= update
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
